# cpp_ws_backend

./: .gitignore  README.md
src/: main.cpp  wsdbconnectionpool.cpp  wsdbconnectionpool.h  wsregex.cpp  wsregex.h  wsroute.h  wsserver.cpp  wsserver.h  wsthreadpool.cpp  wsthreadpool.h  wsworker.cpp  wsworker.h
tests/sqlite-demo/: .gitignore  CMakeLists.txt  Makefile  build.sh  router.h  sqlite-demo.pro  sqlite-demo.service  webapp.cpp  webapp.h  worker.cpp  worker.h
tests/sqlite-demo/Arch/: .gitignore  PKGBUILD  build.sh
tests/sqlite-demo/Ubuntu_19.04/: README.md  build-deb.sh
tests/sqlite-demo/Ubuntu_19.04/sqlite-demo/: build.sh
tests/sqlite-demo/Ubuntu_19.04/sqlite-demo-config-nginx/: build.sh
tests/sqlite-demo/Ubuntu_19.04/sqlite-demo-config-nginx/DEBIAN/: control  postinst  prerm
tests/sqlite-demo/Ubuntu_19.04/sqlite-demo-fe/: build.sh
tests/sqlite-demo/Ubuntu_19.04/sqlite-demo/DEBIAN/: control  postinst  prerm
tests/sqlite-demo/Ubuntu_19.10/sqlite-demo/: build.sh
tests/sqlite-demo/Ubuntu_19.10/sqlite-demo-config-nginx/: build.sh
tests/sqlite-demo/Ubuntu_19.10/sqlite-demo-config-nginx/DEBIAN/: control
tests/sqlite-demo/Ubuntu_19.10/sqlite-demo/DEBIAN/: control
tests/sqlite-demo/Ubuntu_20.04/: README.md  build-all.sh
tests/sqlite-demo/Ubuntu_20.04/sqlite-demo/: build.sh  sqlite-demo.init.d
tests/sqlite-demo/Ubuntu_20.04/sqlite-demo-config-nginx/: 000-sqlite-demo.com
tests/sqlite-demo/Ubuntu_20.04/sqlite-demo-config-nginx/DEBIAN/: control  postinst  prerm
tests/sqlite-demo/Ubuntu_20.04/sqlite-demo-fe/: build.sh
tests/sqlite-demo/Ubuntu_20.04/sqlite-demo-fe/DEBIAN/: control
tests/sqlite-demo/Ubuntu_20.04/sqlite-demo/DEBIAN/: control  postinst  prerm
tests/sqlite-demo/nginx/: 000-sqlite-demo.com
tests/sqlite-demo/www/: chart.html  grid.html  index.html
